force-app/main/default/objects/Batch_Process__e/Batch_Process__e.object-meta.xml
<CustomObject>
    <label>Batch Process</label>
    <pluralLabel>Batch Processes</pluralLabel>
</CustomObject>