force-app/main/default/objects/Batch_Process__e/fields/Chunks_Processed__c.field-meta.xml
<CustomField>
    <fullName>Chunks_Processed__c</fullName>
    <label>Chunks Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>