force-app/main/default/objects/Batch_Process__e/fields/Chunks_Total__c.field-meta.xml
<CustomField>
    <fullName>Chunks_Total__c</fullName>
    <label>Chunks Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>